--- a/style.css
+++ b/style.css
@@ -91,38 +91,6 @@ nav ul li ul li a {
   width: 80px;
 }
 
-@media only screen and (max-width: 798px) {
-  .nav-mobile {
-    display: block;
-  }
-
-  nav {
-    width: 100%;
-    padding: 0px 0 15px;
-  }
-  nav ul {
-    display: none;
-  }
-  nav ul li {
-    float: none;
-  }
-  nav ul li a {
-    padding: 15px;
-    line-height: 20px;
-  }
-  nav ul li ul li a {
-    padding-left: 30px;
-  }
-
-  .nav-dropdown {
-    position: static;
-  }
-}
-@media screen and (min-width: 799px) {
-  .nav-list {
-    display: block !important;
-  }
-}
 #nav-toggle {
   position: absolute;
   left: 18px;
@@ -346,9 +314,48 @@ ul {
   font-family: Nexa;
   src: url("Fonts/NexaDemo-Bold.woff");
 }
-.main-text{
+.main-text-heading{
   color: white;
   font-family: Nexa;
   font-size: 65px;
   padding: 0px 40px 0px 40px;
+}
+@media only screen and (max-width: 798px) {
+  .nav-mobile {
+    display: block;
+  }
+
+  nav {
+    width: 100%;
+    padding: 0px 0 15px;
+  }
+  nav ul {
+    display: none;
+  }
+  nav ul li {
+    float: none;
+  }
+  nav ul li a {
+    padding: 15px;
+    line-height: 20px;
+  }
+  nav ul li ul li a {
+    padding-left: 30px;
+  }
+
+  .nav-dropdown {
+    position: static;
+  }
+  .main-text-heading{
+    font-size: 32px;
+  }
+}
+@media screen and (min-width: 799px) {
+  .nav-list {
+    display: block !important;
+  }
+  .main-text-heading{
+    font-size: 40px;
+  }
+
 }
