--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-g@charset "UTF-8";
+@charset "UTF-8";
 .navigation {
   height: 80px;
   background: #ffffff;
@@ -354,6 +354,11 @@ ul {
   }
   .main-text-heading{
     font-size: 32px;
+    padding: 0px 20px 0px 20px;
+  }
+  .main-text-subtext{
+    font-size: 16px;
+    padding: 0px 20px 0px 20px;
   }
 }
 @media screen and (min-width: 799px) {
