--- a/style.css
+++ b/style.css
@@ -373,6 +373,42 @@ ul {
     line-height: 1.7em;
   }
 }
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto auto;
+
+  padding: 10px;
+}
+.grid-container2 {
+  display: grid;
+  grid-template-rows: auto auto auto;
+  padding: 10px;
+
+}
+.grid-item {
+  background-color: rgba(255, 255, 255, 0.8);
+
+  padding: 20px;
+  font-size: 30px;
+  text-align: start;
+
+}
+.grid-item2 {
+  background-color: rgba(255, 255, 255, 0.8);
+
+  padding: 20px;
+  font-size: 20px;
+  text-align: start;
+
+}
+.grid-item3 {
+  background-color: rgba(255, 255, 255, 0.8);
+
+  padding: 20px;
+  font-size: 30px;
+  text-align: start;
+
+}
 @media screen and (min-width: 799px) {
   .nav-list {
     display: block !important;
