Bootstrap gird added

--- a/style.css
+++ b/style.css
@@ -328,9 +328,32 @@ ul {
 }
 .body-text{
   color: grey;
-
+  line-height: 1.5em;
   font-size: 16px;
   padding: 0px 40px 0px 40px;
+}
+.grid-left{
+  color: grey;
+  line-height: 1.5em;
+  font-size: 16px;
+  padding: 0px 20px 0px 40px;
+}
+.grid-right{
+  color: grey;
+  line-height: 1.5em;
+  font-size: 16px;
+  padding: 0px 40px 0px 20px;
+}
+.grid-middle{
+  color: grey;
+  line-height: 1.5em;
+  font-size: 16px;
+  padding: 0px 20px 0px 20px;
+}
+
+
+.grid-spacing{
+  padding: 40px 40px 40px 40px;
 }
 @media only screen and (max-width: 798px) {
   .nav-mobile {
@@ -373,42 +396,39 @@ ul {
     line-height: 1.7em;
   }
 }
-.grid-container {
-  display: grid;
-  grid-template-columns: auto auto auto;
+/*.grid-container {*/
+/*  display: grid;*/
+/*  grid-template-columns: auto auto auto;*/
 
-  padding: 10px;
-}
-.grid-container2 {
-  display: grid;
-  grid-template-rows: auto auto auto;
-  padding: 10px;
+/*  padding: 10px;*/
+/*}*/
+/*.grid-container2 {*/
+/*  display: grid;*/
+/*  grid-template-rows: auto auto auto;*/
+/*  padding: 10px;*/
 
-}
-.grid-item {
-  background-color: rgba(255, 255, 255, 0.8);
+/*}*/
+/*.grid-item {*/
+/*  background-color: rgba(255, 255, 255, 0.8);*/
 
-  padding: 20px;
-  font-size: 30px;
-  text-align: start;
+/*  padding: 20px;*/
+/*  font-size: 30px;*/
+/*  text-align: start;*/
 
-}
-.grid-item2 {
-  background-color: rgba(255, 255, 255, 0.8);
+/*}*/
+/*.grid-item2 {*/
+/*  font-size: 16px;*/
+/*  text-align: start;*/
 
-  padding: 20px;
-  font-size: 16px;
-  text-align: start;
+/*}*/
+/*.grid-item3 {*/
+/*  background-color: rgba(255, 255, 255, 0.8);*/
 
-}
-.grid-item3 {
-  background-color: rgba(255, 255, 255, 0.8);
+/*  padding: 20px;*/
+/*  font-size: 30px;*/
+/*  text-align: start;*/
 
-  padding: 20px;
-  font-size: 30px;
-  text-align: start;
-
-}
+/*}*/
 .button {
   border: 2px solid black;
   color: black;
