--- a/style.css
+++ b/style.css
@@ -327,7 +327,7 @@ ul {
   padding: 0px 40px 0px 40px;
 }
 .body-text{
-  color: grey;
+  color: black;
   line-height: 1.5em;
   font-size: 16px;
   padding: 0px 40px 0px 40px;
@@ -432,6 +432,12 @@ ul {
 /*  text-align: start;*/
 
 /*}*/
+
+ul {
+  list-style-type: bullet;
+  margin: 20px;
+  padding: 20px;
+}
 .button {
   border: 2px solid black;
   color: black;
