--- a/style.css
+++ b/style.css
@@ -432,6 +432,31 @@ ul {
 /*  text-align: start;*/
 
 /*}*/
+.div2 {
+  border-radius:10px;
+  width: 300px;
+  height: 130px;
+  padding: 20px;
+  box-sizing: border-box;
+  background: gold;
+}
+.div3 {
+  width: 300px;
+  height: 100px;
+  padding: 20px;
+  box-sizing: border-box;
+  background:peachpuff;
+  border: 10px black;
+}
+
+.div4{
+  width: 300px;
+  height: 150px;
+  padding: 10px;
+  box-sizing: border-box;
+  border: 5px solid green;
+  align-items:start;
+}
 
 ul {
   list-style-type: bullet;
@@ -454,7 +479,6 @@ ul {
   left: 50px;
   top: 100px;
 }
-
 .button1 {background-color: black;}
 @media screen and (min-width: 799px) {
   .nav-list {
