--- a/style.css
+++ b/style.css
@@ -327,7 +327,7 @@ ul {
   padding: 0px 40px 0px 40px;
 }
 .body-text{
-  color: black;
+  color: dimgray;
   line-height: 1.5em;
   font-size: 16px;
   padding: 40px 40px 0px 40px;
