--- a/style.css
+++ b/style.css
@@ -40,6 +40,9 @@ nav ul li {
   float: left;
   position: relative;
 }
+nav ul li li{
+ position: relative ;
+}
 nav ul li a,
 nav ul li a:visited {
   display: block;
@@ -348,34 +351,34 @@ ul {
 }
 .div2 {
   border-radius:10px;
-  width: 300px;
-  height: 130px;
-  padding: 20px;
+  width: auto;
+  /*height: 130px;*/
+  padding: 20px 20px 20px 20px;
   box-sizing: border-box;
   background: gold;
 }
 .div3 {
-  width: 300px;
-  height: 100px;
-  padding: 20px;
+  width: auto;
+  /*height: 100px;*/
+  padding: 20px 20px 20px 20px;
   box-sizing: border-box;
   background:peachpuff;
   border: 10px black;
 }
 
 .div4{
-  width: 300px;
-  height: 150px;
+  width: auto;
+  /*height: 150px;*/
   padding: 10px;
   box-sizing: border-box;
   border: 5px solid green;
   align-items:start;
 }
 
-ul {
+.ul-nav-list{
   list-style-type: bullet;
   /*margin: 20px;*/
-  padding: 20px;
+  /*padding: 20px;*/
 }
 .button {
   border: 2px solid black;
