--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
 @charset "UTF-8";
 .navigation {
-  height: 80px;
+  height: 140px;
   /*background: #ffffff;*/
-  background: rgb(255,255,255);
-  background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(0,0,0,1) 63%);
-  box-shadow: 0 2px 4px 0 rgba(0,0,0,.4);
+  background: rgb(248, 249, 250);
+  /*background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(0,0,0,1) 63%);*/
+  box-shadow: 0 2px 10px 0 rgba(0,0,0,.6);
   position: fixed;
   width: 100%;
   z-index: 1;
+
 }
 
 .brand {
@@ -32,12 +33,15 @@
 }
 
 nav {
-  float: right;
+  float: inside;
+  display:flex;justify-content:center;
+
 }
 nav ul {
   list-style: none;
-  margin: 0;
+  margin: auto auto auto auto;
   padding: 0;
+  /*display:flex;justify-content:center;*/
 }
 nav ul li {
   float: left;
@@ -50,13 +54,13 @@ nav ul li a,
 nav ul li a:visited {
   display: block;
   padding: 0 20px;
-  line-height: 80px;
-  color: white;
+  line-height: 60px;
+  color: black;
   text-decoration: none;
 }
 nav ul li a:hover,
 nav ul li a:visited:hover {
-  background: #2581DC;
+  background: #5E4E4E;
   text-decoration: none;
   color:black;
 }
