--- a/style.css
+++ b/style.css
@@ -76,7 +76,19 @@ nav ul li ul li a {
   padding: 15px;
   line-height: 20px;
 }
+.col-sm-4 grid-spacing{
+  float: left;
+  width: 50%;
+  padding: 20px;
 
+}
+.col-sm-4 grid-spacing img {
+  width: 100%;
+  transition: 0.5s all ease-in-out;
+}
+.col-sm-4 grid-spacing:hover img {
+  transform: scale(1.5);
+}
 .nav-dropdown {
   position: absolute;
   display: none;
@@ -309,11 +321,32 @@ ul {
 }
 /*middle css*/
 .main-bg {
-  height: 300px;
-  background-image: url("consfinal.jpg");
+  height: 600px;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+}
+.geeks {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.geeks img {
+  width: 100%;
+  transition: 0.5s all ease-in-out;
+}
+
+.geeks:hover img {
+  transform: scale(1.2);
+}
+.centered {
+  font-size: 250%;
+  color: white;
+  font-family: "Lucida Handwriting", serif;
+  position: absolute;
+  top: 40%;
+  left: 10%;
 }
 .img-overlay{
   background:rgba(0,0,0,0.5);
