--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
 }
 
 .nav-container {
-  max-width: 98%;
+  max-width: 100%;
   margin: 0 auto;
   background: rgb(255,255,255);
   background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(0,0,0,1) 72%);
@@ -75,19 +75,6 @@ nav ul li ul li {
 nav ul li ul li a {
   padding: 15px;
   line-height: 20px;
-}
-.col-sm-4 grid-spacing{
-  float: left;
-  width: 50%;
-  padding: 20px;
-
-}
-.col-sm-4 grid-spacing img {
-  width: 100%;
-  transition: 0.5s all ease-in-out;
-}
-.col-sm-4 grid-spacing:hover img {
-  transform: scale(1.5);
 }
 .nav-dropdown {
   position: absolute;
@@ -321,7 +308,7 @@ ul {
 }
 /*middle css*/
 .main-bg {
-  height: 600px;
+  height: 100%;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -333,7 +320,7 @@ ul {
 }
 
 .geeks img {
-  width: 100%;
+  /*width: 100%;*/
   transition: 0.5s all ease-in-out;
 }
 
@@ -351,7 +338,7 @@ ul {
 .img-overlay{
   background:rgba(0,0,0,0.5);
   width: 100%;
-  height: 100%;
+  height: 40%;
 }
 .main-text-heading{
   color: white;
@@ -370,6 +357,7 @@ ul {
   font-size: 16px;
   padding: 40px 120px 0px 120px;
 }
+
 .grid-left{
   padding: 0px 20px 0px 40px;
 }
@@ -379,7 +367,10 @@ ul {
 .grid-middle{
   padding: 0px 20px 0px 20px;
 }
-
+.hovereffect:hover{
+  border: 1px solid;
+  border-color: #a23434;
+}
 
 .grid-spacing{
   padding: 40px 40px 40px 40px;
@@ -387,7 +378,7 @@ ul {
 .div2 {
   border-radius:10px;
   width: auto;
-  /*height: 130px;*/
+  /*height: 160px;*/
   padding: 20px 20px 20px 20px;
   box-sizing: border-box;
   background: gold;
@@ -436,15 +427,16 @@ ul {
   padding: 12px 32px;
   text-align: center;
   text-decoration: none;
-  display: inline-block;
+  /*display: inline-block;*/
   font-size: 20px;
   /*margin: 4px 2px;*/
   border-radius: 12px;
   cursor: pointer;
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-  position: relative;
-  left: 120px;
-  top: 20px;
+  position: center;
+
+  /*left: 120px;*/
+  /*top: auto;*/
 }
 .button1 {background-color: black;}
 .make-me-sticky {
