--- a/style.css
+++ b/style.css
@@ -338,13 +338,20 @@ ul {
   transition: 0.5s all ease-in-out;
 }
 
-/*.geeks img {*/
-/*  width: 100%;*/
-/*  transition: 0.5s all ease-in-out;*/
-/*}*/
+
 
 .geeks:hover{
   transform: scale(1.1);
+}
+.geeks2{
+  overflow: hidden;
+}
+.geeks2 img {
+  width: 100%;
+  transition: 0.5s all ease-in-out;
+}
+.geeks2 img:hover{
+  transform: scale(1.2);
 }
 .centered {
     font-size: 250%;
