--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   height: 140px;
   /*background: #ffffff;*/
   background: rgb(248, 249, 250);
-  /*background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(0,0,0,1) 63%);*/
+
   box-shadow: 0 2px 10px 0 rgba(0,0,0,.6);
   position: fixed;
   width: 100%;
@@ -29,7 +29,6 @@
   max-width: 100%;
   margin: 0 auto;
   background: rgb(255,255,255);
-  background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(0,0,0,1) 72%);
 }
 
 nav {
@@ -396,9 +395,14 @@ ul {
 .grid-middle{
   padding: 0px 20px 0px 20px;
 }
+.hovereffect{
+  /*box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);*/
+  transition: box-shadow 0.3s ease-in-out;
+}
 .hovereffect:hover{
   border: 1px solid;
   border-color: #a23434;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.6);
 }
 
 .grid-spacing{
