--- a/style.css
+++ b/style.css
@@ -496,6 +496,30 @@ ul {
   height: 100%;
   padding: 40px 20px 20px 40px;
 }
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+}
+
+.fa:hover {
+  opacity: 0.7;
+}
+.fa-linkedin {
+  background: #007bb5;
+  color: white;
+}
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+.fa-instagram {
+  background: #125688;
+  color: white;
+}
 
 /*MOBILE CSS*/
 @media only screen and (max-width: 798px) {
