--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   /*background: #ffffff;*/
   background: rgb(248, 249, 250);
 
-  box-shadow: 0 2px 10px 0 rgba(0,0,0,.6);
+  /*box-shadow: 0 2px 10px 0 rgba(0,0,0,.6);*/
   position: fixed;
   width: 100%;
   z-index: 1;
@@ -27,7 +27,7 @@
 
 .nav-container {
   max-width: 100%;
-  margin: 0 auto;
+  /*margin: 0 auto;*/
   background: rgb(255,255,255);
 }
 .button2{
@@ -527,7 +527,7 @@ ul {
   }
   nav {
     width: 100%;
-    padding: 0px 0 15px;
+    /*padding: 0px 0 15px;*/
   }
   nav ul {
     display: none;
@@ -573,7 +573,7 @@ ul {
   }
   .make-me-sticky {
     position: relative;
-    position: relative;
+    /*position: relative;*/
     top: 0;
 
     /*padding: 0 15px;*/
