--- a/style.css
+++ b/style.css
@@ -392,6 +392,13 @@ ul {
   font-size: 16px;
   padding: 40px 120px 0px 120px;
 }
+.body-text-2{
+  color: dimgray;
+  line-height: 1.7em;
+  font-size: 16px;
+  padding: 40px 120px 0px 0px;
+  text-align: justify;
+}
 
 .grid-left{
   padding: 0px 20px 0px 40px;
@@ -568,6 +575,13 @@ ul {
     padding: 20px 15px 20px 15px;
     line-height: 1.7em;
   }
+  .body-text-2{
+    color: gray;
+    line-height: 1.7em;
+    font-size: 15px;
+    padding: 20px 15px 20px 15px;
+  }
+
   .grid-left{
     padding: 0px 20px 0px 20px;
   }
