--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   /*background: #ffffff;*/
   background: rgb(248, 249, 250);
 
-  /*box-shadow: 0 2px 10px 0 rgba(0,0,0,.6);*/
+  box-shadow: 0 2px 10px 0 rgba(0,0,0,.6);
   position: fixed;
   width: 100%;
   z-index: 1;
@@ -19,13 +19,18 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  color: rgba(0,0,0,0.7);
-  background-color: rgb(248, 249, 250);
+  /*color: rgba(0,0,0,0.7);*/
+  color: white;
+  /*background-color: rgb(248, 249, 250);*/
+  /*background-color: rgb(242,243,244);  #1f0000	#470000*/
+  background-color: #610000;
   height: 50px;
   text-decoration: none;
   transition: all 0.3s ease-in;
   /*font family*/
   font-weight: bold;
+
+
   /*transformtext*/
 }
 .nav-links a:hover{
@@ -101,6 +106,7 @@
   max-width: 100%;
   /*margin: 0 auto;*/
   background: rgb(255,255,255);
+  box-shadow:inset 0 0 5px rgba(0,0,0,.4);
 }
 /*.button2{*/
 /*  margin: 0;*/
@@ -409,7 +415,7 @@ ul {
   height: 35vh;
   width: 100%;
    overflow: hidden;
-   background-image: url("images/consfinal.jpg");
+   background-image: url("images/contact-us.jpg");
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
